--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 <body>
     <main>
         <Header>
-            <h1>Titulo do paragrafo 1</h1>
+            <h1>Cursos grátis!!!</h1>
             <article>
-                <h2>Titulo do Artigo</h2>
-                <p>Parágrafo do Artigo 01</p>
+                <h2>Curso de HTML com CSS.</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, id maxime? Saepe modi impedit est dolores repellendus porro quos, nulla consequuntur dicta ab iusto facilis. Tempore ullam labore fugit nesciunt.</p>
             </article>
             <article>
-                <h2>titulo do Parágrafo 02</h2>
-                <p>Parágrafo do artigo 02</p>
+                <h2>Curso de Java Script</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia consequatur, cum deserunt perspiciatis numquam aperiam ex iste fugiat veniam et, maxime aut nulla minima architecto nisi doloribus inventore, dolorum placeat.</p>
             </article>
         </Header>
     </main>
